# msc-code

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt  run-bench.sh  run-tests.sh
bitcode-samples/: bison.bc  diff.bc  htop.bc  httpd.bc  lingeling.bc  nano.ll  stockfish.bc  swap.bc  wireshark.bc  zstd.bc
bitcode-samples/linux-andersen-dump/: CMakeCache.txt
cuda-benchmarks/: CMakeLists.txt  memory-test.cu  mgpu.cu  parallel-access.cu  pointer-test.cu  thrust-tuple-sort.cu
custom_kernel/: cfpq.cu  matmul.py  spbla.cpp  spbla.py  standard_matmul.cu  test_edges.txt
graph_analysis/: callgraph_final.dot  graph-tool-analyze-graph.py  networkx-test.py
graspan/: CMakeLists.txt  main.cpp
graspan_debugging/: parse_partition.cpp  test-edges.txt  test-rules.txt
graspan_rules/cpu/: rules_pointsto_llvm  rules_pointsto_with_as
graspan_rules/custom/: alias.txt  dataflow.txt  pointsto-streamlines.txt  pointsto.txt  simple.txt
graspan_rules/gpu/: rules_pointsto_llvm.txt  rules_pointsto_orig.txt  rules_pointsto_with_as.txt
include/: mmxcflr.h
include/WPA/: AndersenCustom.h  AndersenOpt.h
lib/: CMakeLists.txt
lib/WPA/: AndersenCustom.cpp
lib/spbla/: CMakeLists.txt
lib/spbla/clbool/src/cl/headers/: bitonic_esc.h  conversions.h  coo_bitonic_sort.h  coo_kronecker.h  coo_reduce_duplicates.h  count_workload.h  csr_addition.h  dcsr_kronecker.h  dscr_to_coo.h  for_test___half_sized_scan.h  hash___bitonic_sort.h  hash___hash_global.h  hash___hash_pwarp.h  hash___hash_tb.h  initialization.h  merge_large_rows.h  prefix_sum.h  prepare_positions.h  reduce.h  set_positions.h  submatrix.h
mmxcflr/: CMakeLists.txt
mmxcflr/include/: AndersenCustom.h  AndersenOpt.h  mmxcflr.h
mmxcflr/src/: main.cpp  mmxcflr.cpp
ptagpu/: CMakeLists.txt  common.cu  common.cuh  ptagpu.cc  shared.h  stats.cc  svfhook.cc  svfhook.h  time-measure.cc
python-wrapper/: large-plot.py  parse.py  requirements.txt  rewriteRule.py
src/: dump-andersen.cpp  leaktest.cpp  llist.cpp  main.cpp  mmxcflr.cpp  parse.py  run.sh  simple.c  spbla.cpp  svf-ex.cpp  test.c
svf-experiments/: CMakeLists.txt
svf-experiments/src/: dump-andersen.cpp  dump-pag.cpp  dump-preanalysis.cpp  inlining.cpp  leaktest.cpp
