enable_language(CUDA)
find_package(Boost REQUIRED COMPONENTS system thread)
add_executable(graspan main.cpp kernel.cu)
target_link_libraries(graspan pthread ${CUDA_LIBRARIES} ${Boost_LIBRARIES})
set_target_properties(graspan PROPERTIES CUDA_ARCHITECTURES "86")
include_directories("${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES}")